--- a/UI/src/index.ejs
+++ b/UI/src/index.ejs
@@ -8,7 +8,7 @@
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script defer src="http://localhost:3001/static/js/bundle.js"></script>
+    <script defer src="http://localhost:8082/main.js"></script>
 </body>
 
 </html>
