prod infrastructure + relative routes, track as a domain concept, reenable client click tracking -> George's project

--- a/UI/src/index.ejs
+++ b/UI/src/index.ejs
@@ -8,7 +8,7 @@
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script defer src="http://localhost:81/Comparison/main.js"></script>
+    <script defer src="/Comparison/main.js"></script>
 </body>
 
 </html>
